package com.you.lld.problems.bookmyshow.model;

public enum City {
    BANGALORE,
    MUMBAI,
    DELHI,
    HYDERABAD,
    CHENNAI,
    KOLKATA,
    PUNE,
    AHMEDABAD
}


