package com.you.lld.problems.bookmyshow.model;

public enum Genre {
    ACTION,
    COMEDY,
    DRAMA,
    HORROR,
    ROMANCE,
    THRILLER,
    SCI_FI,
    DOCUMENTARY,
    ANIMATION
}


