package com.you.lld.problems.bookmyshow.model;

public enum Language {
    ENGLISH,
    HINDI,
    TAMIL,
    TELUGU,
    KANNADA,
    MALAYALAM,
    BENGALI,
    MARATHI
}


